--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -181,7 +181,6 @@ a:hover {
 }
 
 .app {
-  margin-block: 30.4rem 23.9rem;
   margin-inline: auto;
   max-width: 92rem;
   display: flex;
@@ -192,7 +191,7 @@ a:hover {
 }
 .app__header {
   text-align: center;
-  margin-bottom: 8rem;
+  margin-block: 16.3rem 8rem;
   width: 100%;
 }
 .app__logo {
